# hft_mm

./: Cargo.toml  sessions.json
.claude/: settings.json
deploy/: hft-mm.service  setup-ec2.sh
frontend/: .env.example  .env.local  .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  prerender-manifest.json
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js
frontend/.next/static/chunks/: _app-pages-browser_node_modules_next_dist_client_dev_noop-turbopack-hmr_js.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 1bb45cdaeb191ed8.webpack.hot-update.json  5338f0e5cb3e5e41.webpack.hot-update.json  b63b9cfc1fc61e30.webpack.hot-update.json  webpack.0a46ed2ba34bd16e.hot-update.js  webpack.0a91faf86168e26f.hot-update.js  webpack.1bb45cdaeb191ed8.hot-update.js  webpack.41b11c1a0466ec1f.hot-update.js  webpack.4279d66d5ae2aa50.hot-update.js  webpack.4481f21b8a772f99.hot-update.js  webpack.5338f0e5cb3e5e41.hot-update.js  webpack.5c7cd750be612a81.hot-update.js  (+13 more)
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: globals.css  layout.tsx
frontend/app/run/: page.tsx
frontend/app/setup/: page.tsx
frontend/lib/: api.ts  types.ts
src/: api.rs  bot.rs  config.rs  dashboard.rs  exchange.rs  main.rs  risk.rs  strategy.rs  trading.rs  types.rs  websocket.rs
(+54 files in other folders)
